Closed Bug 37086 Opened 24 years ago Closed 24 years ago

Linux installer silently failing

Categories

(SeaMonkey :: Installer, defect, P1)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: agracebush, Assigned: samir_bugzilla)

Details

(Keywords: smoketest, Whiteboard: [nsbeta2+])

After entering data in wizard screens, the installer starts downloading. This 
finishes and 'extracting files....' message comes up. Wizard quits. No messages 
on screen.
Linux installer was working yesterday and over the weekend.
This doesn't sound like it's broken by dbragg's change.  

Possibly caused by new changes went in yesterday.

Doug, can you take a look at this bug too?
Keywords: smoketest
Status: NEW → ASSIGNED
Priority: P3 → P1
Target Milestone: --- → M16
NS_InitXPCOM is failing in the QI to nsDirectoryService.  Investigation 
continues.
Doug just checked in a patch from tor@cs.brown.edu that fixes this.  Thanks Tim!
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Putting on [nsbeta2+] radar in case this reopens. :-)  I hope not.
Keywords: nsbeta2
Whiteboard: [nsbeta2+]
build 200-04-27-09 - still failing
download, extracts and as soon as screen with installing progress is displayed, 
the installer quits
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Fix checked in.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
build 2000-05-03-08
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.