Fix Mac and Linux installer bustage caused by AutoregisterInterfaces.  [b=37086, 36784]